fix the white space on the right

--- a/css/card.css
+++ b/css/card.css
@@ -21,7 +21,7 @@
     display: flex;
     position: relative;
     background: rgba(0,0,0,0,7);
-    width: 800px;
+    max-width: 800px;
     text-align: left;
     margin-top: 50px;
     left: 12%;
